<resources>
    <string name="app_name">DZ2_Android_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_hint_search">Поиск заметок</string>
    <string name="note">Напишите что нибудь...</string>
    <string name="haveFinish">Готово</string>
    <string name="time">17:21</string>
    <string name="month">9 Декабря</string>
    <string name="note_team">Заметки</string>
    <string name="skip">Пропустить</string>
    <string name="start_work">Начать работу</string>
    <string name="fifa_one">FIFA is not a sports. It\'s a feeling.</string>
    <string name="month_random">9 December</string>
    <string name="hello_world">Hello World</string>
    <string name="defaults">Работы с проектами Сделать домашки Убраться дома</string>
    <string name="time_item">17:50</string>
    <string name="do_item">Нужно сделать :</string>
</resources>