<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.detail.DetailFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|start"
                android:layout_margin="10dp"
                android:background="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/month"
                android:textColor="#B1B1B1"
                android:textSize="20sp" />

            <TextClock
                android:id="@+id/tv_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/time"
                android:textColor="#E6E6E6"
                android:textSize="17sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@color/black"
            android:text="@string/haveFinish"
            android:textColor="#E65100"
            android:textSize="20sp"
            android:visibility="invisible" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="#3FB87A"
        android:padding="5dp"
        android:text="Нужно сделать :"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/note"
        android:textColor="@color/white"
        android:textColorHint="#4DFFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="#191818"
            app:cardCornerRadius="20dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="#EBE4C9"
            app:cardCornerRadius="20dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="#571818"
            app:cardCornerRadius="20dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>